--- a/criar.html
+++ b/criar.html
@@ -32,7 +32,7 @@
 			<form action="Script_do_Formulario.php" method="post">
 				<table>
  					<tr>
-   						<td style="font-family: 'Raleway', sans-serif;">Título:</td>
+   						<td style="font-family: 'Raleway', sans-serif;">Nome:</td>
    						<td><input type="text" name="nome" size="40" style="background-color: white; color: black; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;"><br/></td>
  					</tr>
  					<tr>
