--- a/criar.html
+++ b/criar.html
@@ -14,9 +14,9 @@
 		<p id="oi">
 		<div id="topo">
     		<ul id="menuTopo">      
-   				<li><a href="file:///home/aluno/jullyana/sistema/perfil.html" id="perfil" class="menu"><img src="perfil.png" height="50em" width="50em"/></a></li>
+   				<li><a href="file:///home/aluno/uatapedy/perfil.html" id="perfil" class="menu"><img src="perfil.png" height="50em" width="50em"/></a></li>
            		<li><a href="#" id="chat" class="menu"><img src="chat.svg"height="50em" width="50em"/></a></li>
-				<li><a href="file:///home/aluno/jullyana/sistema/Uatapedy.html" id="biblioteca" class="menu"><img src="home.svg"height="50em" width="50em"/></a></li>
+				<li><a href="file:///home/aluno/uatapedy/Uatapedy.html" id="biblioteca" class="menu"><img src="home.svg"height="50em" width="50em"/></a></li>
            		<li><a href="#" id="ideias" class="menu"><img src="biblioteca.svg"height="50em" width="50em"/></a></li>
            		<li><a href="#" id="notification" class="menu"><img src="notification.svg"height="50em" width="50em"/></a></li>
            		<li><a href="#" id="settings" class="menu"><img src="settings.svg"height="50em" width="50em"/></a></li>
@@ -29,7 +29,7 @@
       	</section>
 		</div>
 		<div id="caixas">
-			<form action="Script_do_Formulario.php" method="post">
+			<form action="file:///home/aluno/uatapedy/criar2.html" method="post">
 				<table>
  					<tr>
    						<td style="font-family: 'Raleway', sans-serif;">Nome:</td>
@@ -67,6 +67,6 @@
 		</div>
 
 		</div>
-		<a href="file:///home/aluno/jullyana/sistema/paginahome.html"/><img src="exit.png" width="30em" height="30em" id="exit"/></a>
+		<a href="file:///home/aluno/uatapedy/paginahome.html"/><img src="exit.png" width="30em" height="30em" id="exit"/></a>
 	</body>
 </html>
