--- a/logado.html
+++ b/logado.html
@@ -5,7 +5,7 @@
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<link rel="stylesheet" type="text/css" href="maquiagem.css">
+		<link rel="stylesheet" type="text/css" href="logado.css">
 
 	</head>
 	<body>
