--- a/criar.html
+++ b/criar.html
@@ -7,14 +7,14 @@
 		<meta name="description" content="Aprenda a criar um site completo que usa formulários em HTML">
  	 
 
-		<link rel="stylesheet" type="text/css" href="criar.css">
+		<link rel="stylesheet" type="text/css" href="/home/aluno/Documentos/uatapedy/css/criar.css">
 
 	</head>
 	<body>
 		<p id="oi">
 		<div id="topo">
     		<ul id="menuTopo">      
-   				<li><a href="file:///home/aluno/uatapedy/perfil.html" id="perfil" class="menu"><img src="perfil.png" height="50em" width="50em"/></a></li>
+   				<li><a href="file:///home/aluno/uatapedy/perfil.html" id="perfil" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/perfil.png" height="50em" width="50em"/></a></li>
            		<li><a href="#" id="chat" class="menu"><img src="chat.svg"height="50em" width="50em"/></a></li>
 				<li><a href="file:///home/aluno/uatapedy/Uatapedy.html" id="biblioteca" class="menu"><img src="home.svg"height="50em" width="50em"/></a></li>
            		<li><a href="#" id="ideias" class="menu"><img src="biblioteca.svg"height="50em" width="50em"/></a></li>
