--- a/erro.html
+++ b/erro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>erro</title>
+		<title>Erro</title>
 		<link rel="stylesheet" type="text/css" href="erro.css">
 
 	</head>
