--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Duchy</title>
 
  		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="/home/aluno/Documentos/uatapedy/css/index.css">
 		
 	</head>
 	<body>
@@ -13,7 +13,7 @@
 			<p>Duchy</p>
 			<p class="especial">Crie historias e compartilhe-as com o mundo, liberte sua <span style="color: #FF1493">criatividade</span>!</p>		 
 			<div class="login">
-				<img src="perfil.png" width="75em" height="75em" id="imgperfil"/>				
+				<img src="/home/aluno/Documentos/uatapedy/img/perfil.png" width="75em" height="75em" id="imgperfil"/>				
 				<form id="loginf" action="login.php" method="post">
 				<table id="login4">					
 					<tr>
