--- a/create.html
+++ b/create.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 	<head>
-		<title>Duchy Logado</title>
+		<title>Criando</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<link rel="stylesheet" type="text/css" href="/home/aluno/Documentos/uatapedy/css/logado.css">
+		<link rel="stylesheet" type="text/css" href="/home/aluno/Documentos/uatapedy/css/create.css">
 
 	</head>
 	<body>
@@ -22,11 +22,11 @@
 				  <button id="btnBusca">Buscar</button>
 				</div>
 
-				<li><a href="file:///home/aluno/Documentos/uatapedy/pessoal.html" id="pessoal" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/user.svg" height="50em" width="50em"/></a></li>
+				<li><a href="#" id="criar" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/biblioteca.svg" height="50em" width="50em"/></a></li>
 
-				<li><a href="file:///home/aluno/Documentos/uatapedy/create.html" id="criar" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/more.svg" height="50em" width="50em"/></a></li>
+				<li><a href="file:///home/aluno/uatapedy/criar.html" id="troca" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/more.svg" height="50em" width="50em"/></a></li>
 				
-				<li><a href="file:///home/aluno/Documentos/uatapedy/config.html" id="settings" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/settings.svg" height="50em" width="50em"/></a></li>
+				<li><a href="#" id="chat" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/settings.svg" height="50em" width="50em"/></a></li>
 
             </ul>
 				            
@@ -47,6 +47,6 @@
 		<a href="http://spotify.com/"><img src="/home/aluno/Documentos/uatapedy/img/spotify.svg" width="30em" height="30em" id="spoti"/></a>
 		<a href="http://twitter.com/"><img src="/home/aluno/Documentos/uatapedy/img/twitter.svg" width="30em" height="30em" id="tw"/></a>
 		<a href="http://tumblr.com/"><img src="/home/aluno/Documentos/uatapedy/img/tumblr.svg" width="30em" height="30em" id="tum"/></a>
-		<a href="file:///home/aluno/Documentos/uatapedy/index.html"/><img src="/home/aluno/Documentos/uatapedy/img/exit.png" width="30em" height="30em" id="exit"/></a>
+		<a href="file:///home/aluno/uatapedy/paginahome.html"/><img src="/home/aluno/Documentos/uatapedy/img/exit.png" width="30em" height="30em" id="exit"/></a>
 	</body>
 </html>
