--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<p class="especial">Crie historias e compartilhe-as com o mundo, liberte sua <span style="color: #FF1493">criatividade</span>!</p>		 
 			<div class="login">
 				<img src="/home/aluno/Documentos/uatapedy/img/perfil.png" width="75em" height="75em" id="imgperfil"/>				
-				<form id="loginf" action="login.php" method="post">
+				<form src="file:///home/aluno/Documentos/uatapedy/cadastro.php" id="loginf" action="login.php" method="post">
 				<table id="login4">					
 					<tr>
    						<td>
