--- a/logado.html
+++ b/logado.html
@@ -37,6 +37,7 @@
     	<div id="caixas">
 				
 				<img class="img1" src="/home/aluno/Documentos/uatapedy/img/gato.jpg"/>
+					<p id=historia1>História 1</p>
 				<img class="img2" src="/home/aluno/Documentos/uatapedy/img/bone.jpg"/>
 				<img class="img3" src="/home/aluno/Documentos/uatapedy/img/quarto.jpg"/>
 				<img class="img4" src="/home/aluno/Documentos/uatapedy/img/livros.jpg"/>
