--- a/perfil.html
+++ b/perfil.html
@@ -22,9 +22,9 @@
 
 				<li><a href="#" id="biblioteca" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/biblioteca.svg" height="50em" width="50em"/></a></li>
 
-				<li><a href="file:///home/aluno/uatapedy/criar.html" id="criar" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/more.svg" height="50em" width="50em"/></a></li>
+				<li><a href="#" id="noti" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/notification.svg" height="50em" width="50em"/></a></li>
 				
-				<li><a href="#" id="settings" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/settings.svg" height="50em" width="50em"/></a></li>
+				<li><a href="file:///home/aluno/Documentos/uatapedy/perfil.html" id="perfil" class="menu"><img src="/home/aluno/Documentos/uatapedy/img/perfil.png" height="50em" width="50em"/></a></li>
 
         </ul>
 			
