modificacoes no index e config

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Duchy</title>
 
  		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-		<link rel="stylesheet" type="text/css" href="/home/aluno/Documentos/uatapedy/css/index.css">
+		<link rel="stylesheet" type="text/css" href="/var/www/html/duchy/uatapedy-master/css/index.css">
 		
 	</head>
 	<body>
@@ -13,8 +13,8 @@
 			<p>Duchy</p>
 			<p class="especial">Crie historias e compartilhe-as com o mundo, liberte sua <span style="color: #FF1493">criatividade</span>!</p>		 
 			<div class="login">
-				<img src="/home/aluno/Documentos/uatapedy/img/perfil.png" width="75em" height="75em" id="imgperfil"/>				
-				<form src="file:///home/aluno/Documentos/uatapedy/cadastro.php" id="loginf" action="login.php" method="post">
+				<img src="/var/www/html/duchy/uatapedy-master/img/perfil.png" width="75em" height="75em" id="imgperfil"/>				
+				<form src="/var/www/html/duchy/uatapedy-master/php/cadastro.php" id="loginf" action="login.php" method="post">
 				<table id="login4">					
 					<tr>
    						<td>
